allow reordering the categories list
only works in the panel, changes are not visible in the main view
checks the 2nd checkbox of #21

--- a/css/style.css
+++ b/css/style.css
@@ -831,7 +831,7 @@ footer .circular-button .icon {
 
 /* #region Categories list */
 
-.categories-list-container {
+#categories-list-container {
   width: 100%;
 }
 
