fix placeholder moving when toggling compact mode
closes #26

--- a/css/style.css
+++ b/css/style.css
@@ -141,6 +141,10 @@ body:not(.compact) .word-section {
   --card-margin-top: 32px;
 }
 
+body:not(.compact) #categories-placeholder {
+  padding-top: 20px;
+}
+
 /* #endregion Body variant: compact - no */
 
 /* #region Body variant: compact - yes */
