--- a/css/style.css
+++ b/css/style.css
@@ -424,6 +424,7 @@ main section:last-child {
 
 .swiper-slide {
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
   text-align: center;
@@ -432,6 +433,12 @@ main section:last-child {
   line-height: 1.25;
   letter-spacing: 0.15px;
   word-break: break-word;
+}
+
+.swiper-slide p:not(:first-of-type) {
+  font-size: 70%;
+  font-weight: 400;
+  margin-top: 4px;
 }
 
 .header-container {
