--- a/css/style.css
+++ b/css/style.css
@@ -175,28 +175,30 @@ body.dark {
 
 /* #endregion Body variant: dark mode */
 
-/* #region Body variant: no animations */
+/* #region Body variant: reduced animations */
 
-body.no-animations {
-  --hover-duration: 0.1ms;
+/* NOTE: Some properties here (and in JS) have been commented out. Reduced animations doesn't mean NO animations! */
+
+body.reduced-animations {
+  /* --hover-duration: 0.1ms; */
   --sheet-reveal-duration: 0.1ms;
   --sheet-hide-duration: 0.1ms;
   --fab-transition-duration: 0.1ms;
-  --fab-opacity-duration: 0.1ms;
+  /* --fab-opacity-duration: 0.1ms;
   --icon-rotation-duration: 0.1ms;
-  --spinner-overlay-duration: 0.1ms;
+  --spinner-overlay-duration: 0.1ms; */
 }
 
-body.no-animations .ripple {
+/* body.reduced-animations .ripple {
   transition-duration: 0.1ms;
   opacity: 0.2 !important;
 }
 
-body.no-animations .ripple.done {
+body.reduced-animations .ripple.done {
   opacity: 0 !important;
-}
+} */
 
-/* #endregion Body variant: no animations */
+/* #endregion Body variant: reduced animations */
 
 /* #endregion Body */
 
