--- a/css/style.css
+++ b/css/style.css
@@ -982,6 +982,8 @@ footer .circular-button .icon::before {
 }
 
 .checkbox-label {
+  --outline-additional-offset: calc(-1 * var(--outline-width));
+
   position: relative;
   width: 100%;
   display: flex;
@@ -1087,6 +1089,7 @@ footer .circular-button .icon::before {
   flex-direction: row;
   flex-wrap: nowrap;
   align-items: center;
+  column-gap: var(--distance-between-buttons);
   position: relative;
   background-color: var(--color-card-background);
   z-index: 1;
@@ -1152,10 +1155,6 @@ footer .circular-button .icon::before {
   z-index: 3;
 }
 
-.category-list-item > button + button {
-  margin-left: var(--distance-between-buttons);
-}
-
 /* #endregion Categories list */
 
 /* #endregion Sliding panel (settings, categories, about, ...) */
@@ -1196,9 +1195,9 @@ button::before,
 a::before,
 .checkbox-label::before {
   background-color: currentColor;
-  border: 1px solid transparent;
   outline-width: var(--outline-width);
-  outline-style: auto;
+  outline-offset: calc(0px + var(--outline-additional-offset, 0px));
+  outline-style: solid;
   outline-color: transparent;
 }
 
@@ -1208,7 +1207,7 @@ a::after,
 .checkbox-label::after {
   box-shadow: inset 0 0 0 var(--outline-width) currentColor;
   outline-width: calc(3 * var(--outline-width));
-  outline-offset: calc(-2 * var(--outline-width));
+  outline-offset: calc(-2 * var(--outline-width) + var(--outline-additional-offset, 0px));
   outline-style: double;
   outline-color: transparent;
 }
